swagger and routes
